[package]
name = "better_cursive_table"
version = "0.2.0"
edition = "2024"
authors = ["Justin Coute <jcoute59@gmail.com>"]
description = "TableView and ArrayView for Cursive TUIs"
repository = "https://github.com/justnc32/better_cursive_table.git"
readme = "README.md"
keywords = ["cursive", "TUI", "UI", "table", "array"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
cursive_core = "0.4.0"

[dev-dependencies]
cursive = "0.21.0"
rand = "0.8"
